Updated version on composer archive

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "phemto/phemto",
     "description": "Phemto PHP Dependency Injection Framework",
+	"version": "v0.2.0",
     "authors": [
         {
             "name": "Adam Scarr",
